# SPL

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_and_run.sh  flake.nix  grammar.txt  parse_table.csv  parse_table_stable.csv  prog.txt  run.sh  typecheck_programs.txt
include/: imc.h  lexer.h  parser.h  parser_file_handler.h  symbol.h  token.h  typechecker.h
src/: imc.cpp  lexer.cpp  main.cpp  parser.cpp  parser_file_handler.cpp  symbol.cpp  token.cpp  typechecker.cpp
tests/: imc_gen_test.cpp  lexer_test.cpp  symbols_test.cpp
